tests/import/resolution_scope/negative_nested_scope_validation/dep_transitive_bad.ott
import base :: 'base.ott' ::=
  | tm

grammar
expr :: 'Expr_' ::=
  | cast :: :: bad_cast
